# attention-aware-kv-cache-eviction

./: .gitignore  pyproject.toml
data/: long_context.txt
scripts/: benchmark_utils.py  long_context_benchmark.py  perplexity_benchmark.py  run_hf_h2o_demo.py  throughput_benchmark.py
src/attention_kv_h2o/: __init__.py  fifo_cache.py  h2o_scoring.py  kv_cache_base.py  lru_cache.py  utils.py
tests/: test_cache_policies.py  test_h2o_scoring.py
